Erste Implementierung für Push-Benachrichtigungen.
