# server/dist/swagger.yaml
@@ -13,6 +13,17 @@ definitions:
             - email
             - hashedPw
         type: object
+    PushSubscription:
+        description: "Configuration for a Push Subscription. This can be obtained on the frontend by calling\r\nserviceWorkerRegistration.pushManager.subscribe().\r\nThe expected format is the same output as JSON.stringify'ing a PushSubscription in the browser."
+        properties:
+            endpoint:
+                type: string
+            keys:
+                type: object
+        required:
+            - endpoint
+            - keys
+        type: object
     Condition:
         description: 'Describes the overall weather condition.'
         enum:
@@ -90,6 +101,49 @@ paths:
                     description: 'Please log in.'
             summary: 'Get the plants of the current user.'
             security: []
+            parameters: []
+    /user/save-push-subscription:
+        post:
+            operationId: SavePushSubscription
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        type: object
+                '401':
+                    description: Unauthorized
+                '500':
+                    description: 'Internal server error'
+            security:
+                -
+                    basicAuth: []
+            parameters:
+                -
+                    description: 'The push subscription (as json).'
+                    in: body
+                    name: pushSubscription
+                    required: true
+                    schema:
+                        $ref: '#/definitions/PushSubscription'
+    /user/send-push-notification:
+        post:
+            operationId: SendNotification
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        type: object
+                '401':
+                    description: Unauthorized
+                '500':
+                    description: 'Internal server error'
+            security:
+                -
+                    basicAuth: []
             parameters: []
     /auth/login:
         post:
